--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     font-family: 'Nunito', sans-serif;
 }
 
+.title {
+
+    text-align: center;
+}
+
 header {
     background-color: cornflowerblue;
     padding: 5px;
@@ -22,7 +27,7 @@ main {
 }
 
 .lineInput {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 input {
@@ -31,9 +36,9 @@ input {
     border-radius: 3px;
     outline: 0;
     width: 30px;
-    
+    transition: all .5s ease;
+    position: relative;
 }
-
 
 button {
     border: 0;
@@ -46,9 +51,9 @@ button {
     transition: all ease 0.3s;
 }
 
-    button:hover {
-        background-color: dodgerblue;
-    }
+button:hover {
+    background-color: dodgerblue;
+}
 
 .content {
     margin-top: 15px;
@@ -62,4 +67,31 @@ table {
 
 .center {
     text-align: center;
+}
+
+.quickreport {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.boxes {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+
+.report {
+    width: 100%;
+}
+
+.dropdown{
+    display: block;
+    text-align: center;
+}
+
+.form-control{
+    display: inline-block;
+
 }
